--- a/index.html
+++ b/index.html
@@ -3,18 +3,7 @@
 <head>
 	<title>Quidditch Practice</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<style type="text/css" media="screen">
-		.margin-bottom{
-			margin-bottom:  10px;
-		}
-		.max-width{
-			width: 512px;
-		}
-		.text-left{
-			line-height: 35px;
-			font-size: 0.9em;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body class="text-center">
 	<div class="container max-width">
@@ -23,17 +12,17 @@
 			<h2>Quidditch Practice</h2>
 		</div>
 		
-		<div class="row lead">
-			<p class="text-left">1. Enter your name.<br/>
+		<div class="row lead text-left">
+			1. Enter your name.<br/>
 			2. Click 'Start game'.<br/>
-			3. Catch the snitch.<img src="snitch3.png"><br/>
-			4. Avoid the bludger. <img src="bludger3.png"> If you are hit by the bludger, your speed will slow down for 3 seconds.</p>
+			3. Catch the snitch.<img src="snitch_animated.gif"><br/>
+			4. Avoid the bludger. <img src="bludger3.png"> If you are hit by the bludger, your speed will slow down for 3 seconds.
 		</div>
 		
 		<div class="row margin-bottom">
 			<input class="pull-left" id="player-name" type="text" placeholder="Player name">
-			<button class="pull-left" onclick="newPlayer()">Enter name</button>
-			<button class="pull-right" onclick="startGame()">Start game</button>
+			<button class="pull-left btn btn-default btn-sm" onclick="newPlayer()">Enter name</button>
+			<button class="pull-right btn btn-default btn-sm" onclick="startGame()">Start game</button>
 		</div>
 		
 		<div class="row margin-bottom">
@@ -47,6 +36,7 @@
 	
 	</div>
 			<script type="text/javascript" src="scripts.js"></script>
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
 </body>
 </html>
