added directions to use arrow keys

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<div class="row lead text-left">
 					1. Enter your name.<br/>
 					2. Click 'Start game'.<br/>
-					3. Catch the snitch.<img src="snitch_animated.gif"><br/>
+					3. Use the arrow keys to catch the snitch.<img src="snitch_animated.gif"><br/>
 					4. Avoid the bludger. <img src="bludger3.png"> If you are hit by the bludger, your speed will slow down for 3 seconds.
 				</div>
 				
